👷 ci(workflow): 优化CI/CD测试工作流配置
- 扩展配置文件路径匹配模式，支持 .github/configs 目录下任一层级内的 yml 文件
- 添加镜像标签前缀支持，增强镜像版本管理灵活性

--- a/.github/workflows/cicd-test.yml
+++ b/.github/workflows/cicd-test.yml
@@ -7,7 +7,7 @@ on:
       - synchronize
       - reopened
     paths:
-      - .github/configs/*/*.yml
+      - .github/configs/**/*.yml
 
 env:
   IMAGE_DESCRIPTION: Built by GitHub Actions, the associated workflow is https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
@@ -59,7 +59,12 @@ jobs:
           echo "repo=$(yq e '.repo' $file)" >> $GITHUB_OUTPUT
           echo "ref=$(yq e '.ref' $file)" >> $GITHUB_OUTPUT
           echo "image_name=$(yq e '.image_name' $file)" >> $GITHUB_OUTPUT
-          echo "image_tag=$(yq e '.image_tag' $file)" >> $GITHUB_OUTPUT
+
+          image_tag_prefix=$(yq e '.image_tag_prefix // ""' $file)
+          image_tag=$(yq e '.image_tag' $file)
+          full_image_tag="${image_tag_prefix}${image_tag}"
+
+          echo "image_tag=$full_image_tag" >> $GITHUB_OUTPUT
           echo "build_context=$(yq e '.build_context' $file)" >> $GITHUB_OUTPUT
           echo "dockerfile=$(yq e '.dockerfile' $file)" >> $GITHUB_OUTPUT
           echo "architectures=$(yq e '.architectures' $file)" >> $GITHUB_OUTPUT
