--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -9,6 +9,20 @@
       "matchPackageNames": ["Stremio/stremio-web"],
       "ignoreUnstable": false,
       "versioning": "semver"
+    },
+    {
+      "matchFileNames": [
+        ".github/configs/php/8.1/php.yml",
+        ".github/configs/php/8.1/Dockerfile"
+      ],
+      "allowedVersions": "/^8.1.*/"
+    },
+    {
+      "matchFileNames": [
+        ".github/configs/php/8.4/php.yml",
+        ".github/configs/php/8.4/Dockerfile"
+      ],
+      "allowedVersions": "/^8.4.*/"
     }
   ],
   "customManagers": [
